Version 2.1.1 (being developed)
===============================

* Class maputils.FITSimage:

  * Method header2classic() returns a tuple with three elements.
    The last one used to be a boolean but it is now a list with
    FITS keywords that have been changed.


Version 2.1 (Feb 14, 2011)
==========================

* Class wcs.Projection:

  * added attribute *category*

  * fixed ZPN projection related problem in method *mixed()*

  * minimal FITS headers are now accepted

  * added support for *grid coordinates*, i.e., CRPIX-relative pixel
    coordinates. Methods *pixel2grid()* and *grid2pixel()*.

  * added method *str2pos()* for converting positions represented as strings
    to world- and pixel coordinates.

* Module maputils:

  * added new class *Skypolygon* for plotting shapes like ellipses,
    rectangles and regular polygons. For these shapes
    angles and distances along a great circle are preserved.
    This class can be used for example to draw footprints on all-sky
    plots or a beam to show the resolution of an instrument.

  * improved position information in toolbar.  Message format can be
    changed by user/programmer. 
  
  * support for RGB images. RGB values are displayed in message toolbar.
  
  * class FITSimage: improved versions of *header2classic()* and
    *reproject_to()* methods;
    new *slice2world()* method prints information about
    slice positions (annotate 2d maps from a 3d data cube).

  * catch error if *event.key* is None for Caps Lock keys

  * get rid of 'new' keyword in histogram

  * blur defaults improved

  * *str_header()* method was unable to print dictionary (external) headers.
    Fixed.


* Module mplutil:

  * work-around for special keys which are defined in matplotlib's GTKAgg
    backend but 'missing' from the Qt4Agg backend.
    The following keys are made available: 'pageup', 'pagedown',
    'left', 'right', 'up', 'down', 'home', 'end'.

* Module positions:
