@@ -39,6 +39,30 @@ ruler4.setp_label(color='m')
 ruler5 = annim.Ruler(x1=1, y1=800, x2=800, y2=800, lambda0=0.5, step=2,
                      fmt="%4.1f", addangle=90)
 ruler5.setp_label(color='c')
-annim.plot()
 
+ruler6 = annim.Ruler(pos1="23h0m 15d0m", rulersize=15, step=2,
+                     units='deg', lambda0=0, fliplabelside=True)
+ruler6.setp_label(color='b')
+ruler6.set_title("Size in deg", fontsize=10)
+
+ruler7 = annim.Ruler(pos1="23h0m 30d0m", rulersize=5, rulerangle=90, step=1,
+                     units='deg', lambda0=0)
+ruler7.setp_label(color='#ffbb33')
+
+ruler8 = annim.Ruler(pos1="23h0m 15d0m", rulersize=5, rulerangle=10, step=1.25,
+                     units='deg', lambda0=0, fmt="%02g", fun=lambda x: x*8)
+ruler8.setp_label(color='#3322ff')
+ruler8.set_title("Size in kpc", fontsize=10)
+
+# Increase size and lambda a bit to get all the labels 
+# from 5 to 0 and to 5 again plotted
+# Show LaTeX in ruler label
+ruler9 = annim.Ruler(pos1="23h0m 10d0m", rulersize=10.1, rulerangle=90, step=1,
+                     units='deg', lambda0=0.51)
+ruler9.setp_label(color='#33ff22')
+ruler9.set_title("$\lambda = 0.5$", fontsize=10)
+
+annim.plot()
+annim.interact_toolbarinfo()
+annim.interact_writepos()
 plt.show()
